--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "tailwind": "npx tailwindcss -i ./src/app/globals.css -o ./build/css/style.css --watch",
+    "export": "npm run build"
   },
   "dependencies": {
     "axios": "^1.4.0",
